<b>2012-08-17</b>

* Bugfix: Miles in table sort incorrectly (2053276)

<b>2012-07-30</b>

* Support for Italian, Korean added

<b>2012-06-20</b>

* TripIt: Better handle trips with no flight segments
* TripIt: Fix the duration calculation; indicate when picking up/losing a day (or two)
* TripIt: Fix per-segment radio buttons when clicking on text instead of button.
* TripIt: Use actual flight arrival/departure times, if available.

<b>2012-03-21</b>

* TripIt: Improve messaging for logging in with a partner account.

<b>2012-03-18</b>

* Bugfix: TripIt: Do not attempt to resolve IATA airport and airline codes if not passed in
  (input validation)

<b>2012-03-11</b>

* Bugfix: Add a proper background behind the layer selector and expand based on text contents.
* Change the font color on the map to white when using the blue marble map layer.

<b>2012-03-03</b>

* Render badge with anti-aliased font.  Remove extra space between days and hours if <10 hours.
* First pass at TripIt integration.

<b>2012-03-02</b>

* Tech: Add PDO-based database handle.  Update submit.php and helper.php#gcDistance() to
  use PDO-based dbh.
* Bugfix: Check userid when editing a flight.

<b>2012-03-01</b>

* Tech: Dynamically generate URLs that contain file mtimes.

<b>2012-02-29</b>

* Add ellipsis to truncated notes in flight list.
* Make Class and Reason radio button names clickable to improve flight entry usability.

<b>2012-12-28</b>

* Bugfix: Add some margin above/below the Analyze charts to accommodate mouseover highlight.

<b>2011-11-20</b>

* Update OpenLayers to 2.11.  Fixes Android compatibility.

<b>2011-11-17</b>

* Bugfix: Can't export airline maps to CSV 

<b>2010-10-04</b>

* Change charts on analysis page to JavaScript-based charts.
* Show counts for each pie chart entry.

<b>2011-07-10</b>

* Bugfix: Unable to login after session expiry (2915135)
* Tech: Airport search migrated to JSON, cleaned up
 
<b>2011-06-18</b>
