@@ -29,7 +29,7 @@
 
 	    <h2>Contact</h2>
 
-        <p><a href="http://sourceforge.net/tracker/?atid=1097177&group_id=235620&func=browse">Bug reports</a> and <a href="http://sourceforge.net/tracker/?atid=1097180&group_id=235620&func=browse">feature requests</a> should be filed on <a href="https://sourceforge.net/projects/openflights/">SourceForge</a>.</p>
+        <p><a href="https://github.com/jpatokal/openflights/issues">Bug reports</a> and <a href="https://github.com/jpatokal/openflights/issues">feature requests</a> should be filed on <a href="https://github.com/jpatokal/openflights">GitHub</a>.</p>
 
 	    <p>To get in touch with the team behind OpenFlights, send mail to <i>info at openflights dot org</i> or <i>info at contentshare dot sg</i>.</p>
 
