@@ -98,9 +98,9 @@
 
 	    <h4>Download</h4>
 
-	    <p>To download the current data dump from <a href="http://sourceforge.net/projects/openflights">SourceForge</a> as a very straightforward CSV (comma-separated value) file, suitable for use in spreadsheets etc, simply click below:</p>
+	    <p>To download the current data dump from <a href="https://github.com/jpatokal/openflights">GitHub</a> as a very straightforward CSV (comma-separated value) file, suitable for use in spreadsheets etc, simply click below:</p>
 
-	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://sourceforge.net/p/openflights/code/HEAD/tree/openflights/data/airports.dat?format=raw">airports.dat</a> (~650 KB)</p>
+	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://raw.githubusercontent.com/jpatokal/openflights/master/data/airports.dat">airports.dat</a> (~650 KB)</p>
 
 	    <table><tr><td>
 
@@ -124,7 +124,7 @@
 
 		  </td></tr></table>
 
-	    <p>The SourceForge copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="http://openflights.svn.sourceforge.net/viewvc/openflights/openflights/data/airports.dat?view=log">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights at the airport), do not hesitate to <a href="/about.html">contact us</a>.<p>
+	    <p>The GitHub copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="https://github.com/jpatokal/openflights/commits/master/data/airports.dat">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights at the airport), do not hesitate to <a href="/about.html">contact us</a>.<p>
 
 	    <p>If you'd like an even more thorough database, with extensive coverage of airstrips, heliports and other places of less interest for commercial airline frequent flyers, do check out <a href="http://ourairports.com">OurAirports</a>, whose public domain database covers over 40,000 places to fly from.<p>
 
@@ -182,9 +182,9 @@
 
 	    <h4>Download</h4>
 
-	    <p>To download the current data dump from <a href="http://sourceforge.net/projects/openflights">SourceForge</a> as a very straightforward CSV (comma-separated value) file, suitable for use in spreadsheets etc, simply click below:</p>
+	    <p>To download the current data dump from <a href="https://github.com/jpatokal/openflights/">GitHub</a> as a very straightforward CSV (comma-separated value) file, suitable for use in spreadsheets etc, simply click below:</p>
 
-	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://sourceforge.net/p/openflights/code/HEAD/tree/openflights/data/airlines.dat?format=raw">airlines.dat</a> (~400 KB)</p>
+	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://raw.githubusercontent.com/jpatokal/openflights/master/data/airlines.dat">airlines.dat</a> (~400 KB)</p>
 
 	    <table><tr><td>
 
@@ -208,7 +208,7 @@
 
 		  </td></tr></table>
 
-	    <p>The SourceForge copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="http://openflights.svn.sourceforge.net/viewvc/openflights/openflights/data/airlines.dat?view=log">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights by airline), do not hesitate to <a href="/about.html">contact us</a>.<p>
+	    <p>The GitHub copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="https://github.com/jpatokal/openflights/commits/master/data/airlines.dat">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights by airline), do not hesitate to <a href="/about.html">contact us</a>.<p>
 
 	    <a name="route"></a>
 	    <h2>Route database</h2>
@@ -277,9 +277,9 @@ TOM,5013,ACE,1055,BFS,465,,0,320
 	    
 	    <h4>Download</h4>
 
-	    <p>To download the current data dump from <a href="http://sourceforge.net/projects/openflights">SourceForge</a> as a tab-delimited file, suitable for use in spreadsheets etc, simply click below:</p>
+	    <p>To download the current data dump from <a href="https://github.com/jpatokal/openflights">GitHub</a> as a tab-delimited file, suitable for use in spreadsheets etc, simply click below:</p>
 
-	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://sourceforge.net/p/openflights/code/HEAD/tree/openflights/data/routes.dat?format=raw">routes.dat</a> (~2 MB)</p>
+	    <p style="font-size: 1.5em; padding: 10px; background-color: #ccffcc;">Download: <a href="https://raw.githubusercontent.com/jpatokal/openflights/master/data/routes.dat">routes.dat</a> (~2 MB)</p>
 
 	    <table><tr><td>
 
@@ -303,7 +303,7 @@ TOM,5013,ACE,1055,BFS,465,,0,320
 
 		  </td></tr></table>
 
-	    <p>The SourceForge copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="http://openflights.svn.sourceforge.net/viewvc/openflights/openflights/data/routes.dat?view=log">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights by airline), do not hesitate to <a href="/about.html">contact us</a>.<p>
+	    <p>The GitHub copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="https://github.com/jpatokal/openflights/commits/master/data/routes.dat">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights by airline), do not hesitate to <a href="/about.html">contact us</a>.<p>
 
         <a name="schedule"></a>
 	    <h2>Schedules (Timetables)</h2>
