@@ -60,15 +60,13 @@
 	      <li>OpenFlights <b>works in realtime</b>.  Make any change, and you'll see it right then and there.</li>
 	      <li>OpenFlights supports <b>"trips"</b> (<a href="/help/trip.html">read more</a>).  You can join up any flights together into a trip, which you can then display on its own page and even share with friends.</li>
 	      <li>OpenFlights is <b>free in spirit</b>.  We don't try to lock you in: it's easy to import your data <i>and</i> export copies for safekeeping.</li>
-	      <li>OpenFlights is <b>free software</b>.  All our source code is licensed under the <a href="http://www.fsf.org/licensing/licenses/agpl-3.0.html">GNU Affero General Public License</a> and can be downloaded from <a href="http://sourceforge.net/projects/openflights">SourceForge</a>, so you can set up your own copy or just use the bits you like.  <a href="data.html">Airport, airline and route data</a> is freely available as well.</li>
+	      <li>OpenFlights is <b>free software</b>.  All our source code is licensed under the <a href="http://www.fsf.org/licensing/licenses/agpl-3.0.html">GNU Affero General Public License</a> and can be downloaded from <a href="https://github.com/jpatokal/openflights/">GitHub</a>, so you can set up your own copy or just use the bits you like.  <a href="data.html">Airport, airline and route data</a> is freely available as well.</li>
 	      <li>OpenFlights <b>can be used anywhere</b>.   No need to install any programs, synchronize data or take care of backups, just point your browser to the site.</li>
 	    </ul>
 
 	    <h4>What browsers do you support?</h4>
 
-	    <p>Developed on Firefox, tested on Internet Explorer 7, and seems to work for most (but not all) people on Chrome and Safari as well.  If it works or breaks on anything else, please <a href="/about">let us know</a>, and please do include your exact browser version, operating system and screen size.</p>
-
-	    <p>Note: There is a nasty <a href="htts://sourceforge.net/tracker/?func=detail&aid=2822720&group_id=235620&atid=1097177">known bug</a> for IE7 that prevents drawing the map correctly if your screen is small (eg. 800x600) <a>and</i> you are using certain European languages (eg. French or German).  Workarounds are to switch to English, a larger screen, or a different browser.</p>
+	    <p>Developed on Firefox and Chrome, seems to work for most (but not all) people on Internet Explorer and Safari as well.  Unfortunately the site does <i>not</i> work well on tablets due to screen size limitations. If it works or breaks on anything else, please <a href="/about">let us know</a>, and please do include your exact browser version, operating system and screen size.</p>
 
 	    <h4>How much does it cost?</h4>
 
@@ -86,12 +84,8 @@
 	    
 	    <h4>Why do half the airports disappear when I scroll around from the Americas to Asia or visa versa?</h4>
 	    
-	    <p>This is a <a href="https://sourceforge.net/tracker/index.php?func=detail&aid=2053282&group_id=235620&atid=1097177">bug/missing feature</a> in the mapping system we're using.  Stay tuned.</p>
+	    <p>This is a <a href="https://github.com/jpatokal/openflights/issues/2">bug/missing feature</a> in the mapping system we're using.  Sorry.</p>
 	    
-	    <h4>Why is the map slow to draw sometimes?  Why do map updates slow down my computer?</h4>
-	    
-	    <p>Map tiles are loaded off the Internet, and the flights, airports etc are drawn on top by your own browser.  We warmly recommend using <a href="http://www.getfirefox.net/">Firefox</a>, which is <i>much</i> faster than Internet Explorer.  (Google Chrome is even faster than Firefox, but not officially supported.)  Alternatively, switch to a faster computer or just shrink the window size to speed up things.  The geographic map is also larger and thus slower to load than the political map.</p>
-
 	    <h4>Why aren't the flight paths smoothly curved, especially up near the poles?</h4>
 	    
 	    <p>That would be hard to draw fast, so we cheat and chop them up, one segment per every 500 mi.  Flights under 1000 mi are shown as straight lines.</p>
@@ -149,9 +143,7 @@
 
 	    <h4>You really need to implement cool feature X, and fix terrible bug Y, and do it <i>right now</i>!</h4>
 	    
-	    <p>Please check <a href="http://sourceforge.net/projects/openflights">SourceForge</a> to see if they're already reported, and add them if not.  But remember, this is open source, so the best way to get anything done is to do it yourself!  Bug reports from people who have <a href="/donate">donated to the site</a> also get priority.</p>
-
-	    <p>Direct links: <a href="http://sourceforge.net/tracker/?atid=1097177&group_id=235620&func=browse">Known bugs</a>, <a href="http://sourceforge.net/tracker/?atid=1097180&group_id=235620&func=browse">Feature requests</a></p>
+	    <p>Please check the <a href="https://github.com/jpatokal/openflights/issues">GitHub issue tracker</a> to see if they're already reported, and add them if not.  But remember, this is open source, so the best way to get anything done is to do it yourself!  Bug reports from people who have <a href="/donate">donated to the site</a> also get priority.</p>
 
 	    <h4>You said feature X was implemented/bug Y was fixed yesterday, but I don't see it!</h4>
 
