@@ -30,11 +30,11 @@
 
 	    <p>OpenFlights is a client-server system, with a Javascript frontend (client) and a PHP/MySQL backend (server), and running the demo locally requires both.</p>
 
-	      <p>To start, it's easiest just to grab the entire SVN tree from SourceForge:</p>
+	      <p>To start, it's easiest just to grab the entire Git tree from GitHub:</p>
 
-	      <p><tt>svn co https://openflights.svn.sourceforge.net/svnroot/openflights openflights</tt></p>
+	      <p><tt>git clone git@github.com:jpatokal/openflights.git</tt></p>
 	     
-	      <p>Or <a href="http://openflights.svn.sourceforge.net/viewvc/openflights">browse SVN online</a>.</p>
+	      <p>Or <a href="https://github.com/jpatokal/openflights">browse online</a>.</p>
 
 	      <h4>Server</h4>
 
@@ -114,7 +114,7 @@
 	      </ol>
 
 	      <p>To catch the user's clicks on airports, you'll also want to set up the <tt>onAirportSelect()</tt>
-		and <tt>onAirportUnselect()</tt> callbacks.  All this and more is demonstrated in <tt><a href="http://openflights.svn.sourceforge.net/viewvc/openflights/openflights/widget/demo.html?view=markup">widget/demo.html</a></tt>.</p>
+		and <tt>onAirportUnselect()</tt> callbacks.  All this and more is demonstrated in <tt><a href="https://github.com/jpatokal/openflights/blob/master/widget/demo.html">widget/demo.html</a></tt>.</p>
 
 	      <p>If you encounter any problems getting demo.html to
 	    run (blank map, error messages etc), check the error
